# seabreyh-mc-mod-installer

./: .gitignore  Cargo.toml  README.md  mods.txt
.github/workflows/: release.yml
assets/: ComplementaryReimagined_r1.2.2.zip.txt  config.json  mods.md
mc-laucher-lib-rs/: .gitignore  Cargo.toml
mc-laucher-lib-rs/src/: client.rs  command.rs  expections.rs  fabric.rs  forge.rs  install.rs  json.rs  lib.rs  login.rs  mod_utiles.rs  natives.rs  optifine.rs  runtime.rs  utils.rs  vanilla.rs
src/: ferium.rs  main.rs
workflows/: release.yml
