[package]
name = "seabreyh-mc-mod-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-laucher-lib-rs = { path = "mc-laucher-lib-rs" }
tokio = { version = "1.16.1", features = [ "test-util", "macros" ] }
quartz_nbt = { version = "0.2.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
dirs = "4.0.0"
