[package]
name = "mc-laucher-lib-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde-xml-rs = "0.5.1"
scraper = "0.12.0"
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "0.8.2", features = [ "v4" ] }
urlparse = "0.7.3"
os-version = "0.2.0"
zip = "0.5.13"
regex = "1.5.4"
lzma-rs = "0.2.0"
rust-crypto = "0.2.36"
log = "0.4.14"
thiserror = "1.0.30"
jsonwebtoken = "8.0.1"
base64 = "0.13.0"
tokio = { version = "1.16.1", features = [ "test-util", "macros", "fs", "process" ] }
dircpy = "0.3.12"